# yojimbo

./: .clang-format  .gitignore  .gitmodules  .mailmap  .sublime-template  .travis.yml  001_reading_and_writing_packets.cpp  002_serialization_strategies.cpp  003_packet_fragmentation_and_reassembly.cpp  004_sending_large_blocks_of_data.cpp  005_packet_aggregation.cpp  006_client_server.cpp  007_packet_encryption.cpp  008_securing_dedicated_servers.cpp  1  BUG  BUILDING  BUILDING.md  BULLSHIT  CHANGES  CHANGES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  DOCUMENTATION NOTES  INSTALL.md  LICENCE  Makefile  NOTES  PLANNING  PLANNING.md  README.md  RESEARCH.md  ROADMAP.md  RON NOTES  SECURITY.md  STANDARD.md  STATE-MACHINE.md  TODO  (+142 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  cla.yml  fuzz-nightly.yml  release-check.yml
docker/: Dockerfile  buildServer.bat  copyFiles.bat  runServer.bat
docker/docker/libyojimbo/: client.cpp  premake5.lua  server.cpp  test.cpp  yojimbo_address.cpp  yojimbo_client_server.cpp  yojimbo_common.cpp  yojimbo_encryption.cpp  yojimbo_network.cpp  yojimbo_platform.cpp  yojimbo_simulator.cpp  yojimbo_sockets.cpp
docker/libyojimbo/: network_info.cpp  premake5.lua  shared.h  yojimbo.h  yojimbo_address.h  yojimbo_allocator.h  yojimbo_bitpack.h  yojimbo_client_server.cpp  yojimbo_config.h  yojimbo_interface.h  yojimbo_matcher.cpp  yojimbo_matcher.h  yojimbo_network.h  yojimbo_simulator.h  yojimbo_sockets.cpp  yojimbo_sockets.h
docker/matcher/: Dockerfile  matcher.go
exampletests/: asserts.h  test_address.cpp
fuzz/: README.md  fuzz_config.h  fuzz_connection.cpp  fuzz_connection_structured.cpp  fuzz_messages.h  fuzz_netcode.c  fuzz_netcode_connect_token.c  fuzz_netcode_params.h  fuzz_reliable.c  fuzz_standalone.h
fuzz/corpus/fuzz_connection/: mixed_channels  reliable_block  reliable_block_multifragment  reliable_messages  reliable_messages_and_block  reliable_variety  unreliable_messages  unreliable_variety
fuzz/corpus/fuzz_connection_structured/: disableblocks_flow  mixed_flow  reliable_block_flow  reliable_messages_flow
fuzz/corpus/fuzz_netcode/: connection_request  disconnect  keep_alive  payload
fuzz/corpus/fuzz_netcode_connect_token/: ipv4  ipv6
fuzz/corpus/fuzz_reliable/: packet_00  packet_01  packet_02  packet_03
fuzz/dict/: fuzz_connection.dict  fuzz_connection_structured.dict  fuzz_netcode.dict  fuzz_netcode_connect_token.dict
include/: yojimbo.h  yojimbo_adapter.h  yojimbo_address.h  yojimbo_allocator.h  yojimbo_base_client.h  yojimbo_base_server.h  yojimbo_bit_array.h  yojimbo_channel.h  yojimbo_client.h  yojimbo_client_interface.h  yojimbo_config.h  yojimbo_connection.h  yojimbo_constants.h  yojimbo_message.h  yojimbo_network_info.h  yojimbo_network_simulator.h  yojimbo_platform.h  yojimbo_queue.h  yojimbo_reliable_ordered_channel.h  yojimbo_sequence_buffer.h  yojimbo_serialize.h  yojimbo_server.h  yojimbo_server_interface.h  yojimbo_unreliable_unordered_channel.h  yojimbo_utils.h
matcher/: Dockerfile  go.mod  go.sum  main.go  matcher.go
netcode/: netcode.c  netcode.h
reliable/: reliable.c  reliable.h
reliable.io/: LICENCE  LOG  README.md  fuzz.c  premake5.lua  reliable.c  reliable.h  soak.c  test.c
reliable.io/docker/: Dockerfile
reliable.io/valgrind/: Dockerfile
serialize/: serialize.h
sodium/: NOTES.md  crypto_generichash_blake2b.h  sodium.c  sodium.h  sodium_core.c  sodium_dolbeau_chacha20-avx2.c  sodium_dolbeau_chacha20-ssse3.c  sodium_poly1305-sse2.c  sodium_private_common.h  sodium_utils.c  sodium_utils.h  sodium_verify.c  sodium_version.h  version.h
source/: yojimbo.cpp  yojimbo_address.cpp  yojimbo_allocator.cpp  yojimbo_base_client.cpp  yojimbo_base_server.cpp  yojimbo_channel.cpp  yojimbo_client.cpp  yojimbo_config.cpp  yojimbo_connection.cpp  yojimbo_network_simulator.cpp  yojimbo_platform.cpp  yojimbo_reliable_ordered_channel.cpp  yojimbo_server.cpp  yojimbo_unreliable_unordered_channel.cpp  yojimbo_utils.cpp
tests/: client.cpp  client_server.cpp  connect.cpp  info.cpp  profile.cpp  secure_client.cpp  secure_server.cpp  server.cpp  shared.h  simple_messages.cpp  soak.cpp  test.cpp
tlsf/: tlsf.c
tools/: fuzz_coverage.sh  gen_seed_corpus.c  gen_seed_corpus_connection.cpp
tools/conformance/: README.md  drive_error_paths.cpp  drive_state_machine.cpp  verify_standard.py  verify_state_machine.py
valgrind/: Dockerfile
vcpkg/: readme_vcpkg.md
vcpkg/consume_yojimbo/: CMakeLists.txt  readme.md  vcpkg-configuration.json  vcpkg.json
vcpkg/consume_yojimbo/src/: main.cpp
vcpkg/ports/yojimbo/: CMakeLists.txt  portfile.cmake  readme.md  usage  vcpkg.json
vcpkg/ports/yojimbo/cmake/: libsodiumConfig.cmake  mbedtlsConfig.cmake
vcpkg/registry/ports/mbedtls/2.24.0/: portfile.cmake
vcpkg/registry/ports/mbedtls/2.24.0/cmake/: mbedtlsConfig.cmake
vcpkg/registry/ports/yojimbo/1.2.1/: CMakeLists.txt  portfile.cmake  usage  vcpkg-configuration.json  vcpkg.json
vcpkg/registry/ports/yojimbo/1.2.1/cmake/: yojimboConfig.cmake  yojimbo_lib.cmake
vcpkg/registry/versions/: baseline.json
vcpkg/registry/versions/m-/: mbedtls.json
vcpkg/registry/versions/y-/: yojimbo.json
vcpkg/versions/: baseline.json
vcpkg/versions/y-/: yojimbo.json
vectorial/: config.h  mat4f.h  quat4f.h  simd4f.h  simd4f_common.h  simd4f_gnu.h  simd4f_neon.h  simd4f_scalar.h  simd4f_sse.h  simd4x4f.h  simd4x4f_gnu.h  simd4x4f_neon.h  simd4x4f_scalar.h  simd4x4f_sse.h  vec2f.h  vec3f.h  vec4f.h
windows/: mbedcrypto-debug.lib  mbedcrypto.lib  mbedtls.lib  mbedx509-release.lib  mbedx509.lib  sodium-release.lib  sodium.lib
windows/sodium/: crypto_generichash_blake2b.h  crypto_hash.h  crypto_hash_sha256.h  crypto_hash_sha512.h  version.h
